Fix api test (docs-test)
